--- a/styles/style.css
+++ b/styles/style.css
@@ -2,20 +2,13 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  --color-fon: #1b1919;
+  --color-text: #fff;
+  --color-active-item: #545050;
 }
 
 html {
   block-size: 100%;
-}
-
-.page {
-  inline-size: 1200px;
-  block-size: 100%;
-  margin: auto;
-  color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
-  font-size: 18px;
-  background-color: #1b1919;
 }
 
 h1,
@@ -37,7 +30,296 @@ ol {
   list-style: none;
 }
 
-/* Кастомный скроллбар */
+.page {
+  display: flex;
+  inline-size: 1200px;
+  block-size: 100%;
+  margin: auto;
+  color: var(--color-text);
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  background-color: var(--color-fon);
+}
+
+.content {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-areas:
+  "result details";
+  padding: 133px 30px;
+  height: 534px;
+}
+
+.result {
+  grid-area: result;
+  width: 711px;
+  margin-top: 78px;
+}
+
+.result__video-container {
+  height: 386px;
+  position: relative;
+}
+
+.result__video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.result__video:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.search-form {
+  display: grid;
+  margin-top: 16px;
+  grid-template-columns: 32% 31% 27%;
+  justify-content: space-between;
+  gap: 35px;
+}
+
+.search-form__fieldset {
+  border: none;
+} 
+
+.search-form__fieldset-title {
+  font-size: inherit;
+  font-weight: inherit;
+  color: inherit;
+  margin-bottom: 5px;
+}
+
+.search-form__label {
+  display: flex;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.search-form__textfield {
+  font-size: inherit;
+  font-weight: inherit;
+  color: inherit;
+  font-family: inherit;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  width: 100%;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  appearance: none;
+  line-height: 135%;
+}
+
+.search-form__textfield:active {
+  border: 1px solid #fff;
+}
+
+input:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.search-form__textfield::placeholder {
+  color: var(--color-text);
+  opacity: 30%;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  flex-direction: row;
+  gap: 13px;
+}
+
+.search-form__checkbox-list .search-form__label:has(:hover)  {
+  text-decoration: underline;
+  cursor: pointer;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 10%;
+}
+
+.search-form__pseudo-checkbox {
+  display: flex;
+  width: 20px;
+  height: 20px;
+  background-color: transparent;
+  border: 1px solid #fff;
+  position: relative;
+  margin: 1px;
+}
+
+.search-form__pseudo-checkbox::after {
+  content: '';
+  width: 100%;
+  background-color: #fff;
+  border: 1px solid var(--color-fon);
+  opacity: 0;
+} 
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  opacity: 1;
+}
+
+.search-form__checkbox:active + .search-form__pseudo-checkbox::after {
+  opacity: 1;
+}
+
+.search-form__label-text {
+  margin-left: 4px;
+}
+
+.button {
+  background-color: transparent;
+  border: none;
+  color: inherit;
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: 700;
+  border: 1px solid #fff;
+  padding-block: 0;
+  padding-inline: 0;
+  width: 100%;
+  height: 34px;
+}
+
+.button:hover {
+  text-decoration: underline;
+  cursor: pointer;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 10%;
+}
+
+.button:active {
+  background-color: var(--color-active-item);
+  text-decoration: none;
+}
+
+.button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.search-form__submit-button {
+  margin-top: 20px;
+}
+
+.content__details {
+  grid-area: details;
+  margin-left: 30px;
+  max-width: 399px;
+  
+}
+
+.title {
+  font-family: 'Oswald';
+  font-size: 75px;
+  font-weight: 700;
+  line-height: 94%;
+  text-transform: uppercase;
+  margin: 3px 0 22px 0;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__list {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.content__list-container {
+  position: relative;
+  overflow: auto;
+  height: 298px;
+}
+
+.content__list-item {
+  padding: 0 3px;
+}
+
+.content__list-item:last-child {
+  margin-bottom: 30px;
+}
+
+.content__video-card {
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+
+.content__card-link {
+  display: grid;
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: inherit;
+  color: inherit;
+  text-decoration: none;
+}
+
+.content__card-link:has(:hover) {
+  text-decoration: underline;
+  cursor: pointer;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 10%;
+}
+
+.content__card-link:has(:active) {
+  background-color: var(--color-active-item);
+  text-decoration: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.content__video-card-title {
+  font-family: 'Oswald';
+  font-weight: 700;
+  font-size: 30px;
+  text-transform: uppercase;
+  line-height: 110%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.content__video-card-description {
+  line-height: 115%;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  line-clamp: 4;
+  overflow: hidden;
+}
+
+.content__video-card-thumbnail {
+  width: 100%;
+  height: 103px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.more-button {
+  width: 392px;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
 .custom-scrollbar::-webkit-scrollbar {
   width: 4px;
 }
