--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,13 @@
+:root {
+  --color-fon: #1b1919;
+  --color-text: #fff;
+  --color-active-item: #545050;
+}
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
-  --color-fon: #1b1919;
-  --color-text: #fff;
-  --color-active-item: #545050;
 }
 
 html {
@@ -36,7 +39,7 @@ ol {
   block-size: 100%;
   margin: auto;
   color: var(--color-text);
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: 'Fira Sans Condensed', 'Arial', sans-serif;
   font-size: 18px;
   font-weight: 400;
   background-color: var(--color-fon);
@@ -47,8 +50,8 @@ ol {
   grid-template-columns: repeat(2, 1fr);
   grid-template-areas:
   "result details";
+  align-items: center;
   padding: 133px 30px;
-  height: 534px;
 }
 
 .result {
@@ -66,6 +69,7 @@ ol {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center;
 }
 
 .result__video:focus-visible {
@@ -114,6 +118,8 @@ ol {
   border-bottom: 1px solid #fff;
   appearance: none;
   line-height: 135%;
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
 }
 
 .search-form__textfield:active {
@@ -184,7 +190,7 @@ input:focus-visible {
   padding-block: 0;
   padding-inline: 0;
   width: 100%;
-  height: 34px;
+  min-height: 34px;
 }
 
 .button:hover {
@@ -215,12 +221,12 @@ input:focus-visible {
 }
 
 .title {
-  font-family: 'Oswald';
+  font-family: 'Oswald', 'Arial', sans-serif;
   font-size: 75px;
   font-weight: 700;
   line-height: 94%;
   text-transform: uppercase;
-  margin: 3px 0 22px 0;
+  margin: 3px 0 20px 0;
 }
 
 .content__accent {
@@ -231,6 +237,7 @@ input:focus-visible {
   display: flex;
   flex-direction: column;
   gap: 30px;
+  padding-top: 2px;
 }
 
 .content__list-container {
@@ -241,10 +248,6 @@ input:focus-visible {
 
 .content__list-item {
   padding: 0 3px;
-}
-
-.content__list-item:last-child {
-  margin-bottom: 30px;
 }
 
 .content__video-card {
@@ -259,6 +262,10 @@ input:focus-visible {
   font-weight: inherit;
   color: inherit;
   text-decoration: none;
+}
+
+.content__card-link_current {
+  background-color: var(--color-active-item);
 }
 
 .content__card-link:has(:hover) {
@@ -278,8 +285,13 @@ input:focus-visible {
   outline-offset: 1px;
 }
 
+.content__video-card-description-container {
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+  
 .content__video-card-title {
-  font-family: 'Oswald';
+  font-family: 'Oswald', 'Arial', sans-serif;
   font-weight: 700;
   font-size: 30px;
   text-transform: uppercase;
@@ -289,17 +301,16 @@ input:focus-visible {
   overflow: hidden;
 }
 
-.content__video-card-description {
+p.content__video-card-description {
   line-height: 115%;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 4;
   line-clamp: 4;
-  overflow: hidden;
 }
 
 .content__video-card-thumbnail {
-  width: 100%;
+  width: 194px;
   height: 103px;
   object-fit: cover;
   object-position: center;
@@ -307,6 +318,7 @@ input:focus-visible {
 
 .more-button {
   width: 392px;
+  margin-top: 30px;
 }
 
 .visually-hidden {
